2008-03-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/externalmodules/: example updated for
	new mechanism - CMakeLists.txt files added, yardevice.cmake
	files removed, README.txt updated.

	* src/modules/: removed yarpdevice.cmake files, no longer used.

2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/CMakeLists.txt: strip old device compilation
	method

	* src/libYARP_OS/src/Companion.cpp: remove old device material
	from CMakeLists.txt file generated by "yarp cmake"

	* src/libYARP_dev/src/PopulateDrivers.cpp.in: removed old
	material for including optional devices

	* src/libYARP_dev/AvailableDevices.txt: removed, no longer used

	* conf/YarpOptions.cmake: hide deprecated
	CREATE_DEVICE_LIBRARY_BUILTINS option until it is removed; use
	CREATE_DEVICE_LIBRARY_MODULES option instead

2008-03-19  Arjan Gijsberts  <arjan@liralab.it>

	* src/libYARP_OS/src/Bottle.cpp: added method
	* src/libYARP_OS/src/BottleImpl.cpp: added method
	* src/libYARP_OS/include/yarp/os/Bottle.h: added method
	* src/libYARP_OS/include/yarp/BottleImpl.h: added method
	* src/libYARP_OS/harness/BottleTest.cpp: added test
	Added pop method to Bottle and BottleImpl for stack 
	functionality.

2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ShmemOutputStream.cpp,ShmemInputStream.cpp:
	fix sizeof syntax (certain gcc versions choking)

	* src/modules/CMakeLists.txt:  move serial device from
	src/libYARP_dev/src/serial, portaudio device from
	src/libYARP_dev/src/portaudio, firewirecamera device from
	src/libYARP_dev/src/firewirecamera, jrkerr device from
	src/libYARP_dev/src/jrkerr, urbtc device from
	src/libYARP_dev/src/urbtc, dimax_u2c device from
	src/libYARP_dev/src/dimax_u2c

2008-03-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: move ffmpeg wrapper from
	src/libYARP_dev/src/ffmpeg, opencv wrapper from
	src/libYARP_dev/src/opencv_grabber, microphone wrapper from
	src/libYARP_dev/src/microphone
